--- a/00-Python Object and Data Structure Basics/01-Numbers.ipynb
+++ b/00-Python Object and Data Structure Basics/01-Numbers.ipynb
@@ -547,7 +547,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -561,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
