--- a/03-Methods and Functions/Excercise/Excercise 06 Nested Statements and Scope.ipynb
+++ b/03-Methods and Functions/Excercise/Excercise 06 Nested Statements and Scope.ipynb
@@ -4,8 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Local Variable"
+    "# LOCAL VARIABLE"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### INTRODUCTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -47,10 +61,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Global variable"
+    "# GLOBAL VARIABLE"
    ]
   },
   {
@@ -93,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
